--- a/game/platforms/SDL/Makefile.MinGWCross
+++ b/game/platforms/SDL/Makefile.MinGWCross
@@ -18,7 +18,7 @@
 
 
 # static lib flag needed to link compiled objs against miniupnp
-PLATFORM_COMPILE_FLAGS = -DWIN_32 -DSTATICLIB
+PLATFORM_COMPILE_FLAGS = -DWIN_32 -DSTATICLIB -static `sdl-config --static-libs`
 
 
 # need various GL libraries, winmm, and portaudio
