--- a/game/platforms/SDL/Makefile.all
+++ b/game/platforms/SDL/Makefile.all
@@ -135,10 +135,10 @@ include ${LAYER_DEPENDS}
 # $<   represents the name.png file
 #
 graphics/%.tga: %.png
-	convert -auto-orient $< -type truecolormatte $@
+	convert $< -type truecolormatte $@
 graphics/%.tga: graphicsSource/%.png
-	convert -auto-orient $< -type truecolormatte $@
+	convert $< -type truecolormatte $@
 music/%.tga: %.png
-	convert -auto-orient $< -type truecolormatte $@
+	convert $< -type truecolormatte $@
 
 
