Required configuration for DiscordController

--- a/game/platforms/SDL/Makefile.MacOSX
+++ b/game/platforms/SDL/Makefile.MacOSX
@@ -56,3 +56,7 @@ DIRECTORY_PLATFORM_PATH = unix
 POLL_PLATFORM = Unix
 POLL_PLATFORM_PATH = unix
 
+# PLATFORM_DISCORD_SDK_FLAG = -Wl,-Bdynamic -ldiscord_game_sdk -L$(DISCORD_SDK_PATH)/lib/x86_64 -Wl,-Bstatic
+ifneq($(DISCORD_SDK_PATH),)
+$(error DISCORD SDK NOT IMPLEMENTED FOR THIS PLATFORM, DISABLE IT)
+endif
