--- a/game/platforms/SDL/Makefile.Raspbian
+++ b/game/platforms/SDL/Makefile.Raspbian
@@ -50,3 +50,7 @@ TIME_PLATFORM_PATH = unix
 
 DIRECTORY_PLATFORM = Unix
 DIRECTORY_PLATFORM_PATH = unix
+
+ifneq($(DISCORD_SDK_PATH),)
+$(error DISCORD SDK NOT IMPLEMENTED FOR THIS PLATFORM, DISABLE IT)
+endif
